--- a/k8s/golang-api.yml
+++ b/k8s/golang-api.yml
@@ -23,26 +23,19 @@ spec:
         ports:
           - containerPort: 3000  # Should match the port number that the Go application listens on    
         env:                     # Environment variables passed to the container
-          - name: REDIS_HOST
-            value: redis-service
-          - name: REDIS_PORT
-            value: "6379"    
           - name: REDIS_PASS
-            valueFrom:
-              secretKeyRef:
-                name: redis-secret
-                key: REDIS_PASS
-
+            value: "11111111"
 ---
 apiVersion: v1
 kind: Service                    # Type of kubernetes resource
 metadata:
-  name: golang-api-service     # Unique name of the resource
+  name: golang-api     # Unique name of the resource
 spec:
   type: NodePort                 # Expose the Pods by opening a port on each Node and proxying it to the service.
-  ports:                         # Take incoming HTTP requests on port 9090 and forward them to the targetPort of 8080
+  ports:                         # Take incoming HTTP requests on port 3000 and forward them to the targetPort of 80
   - name: http
-    port: 3000
-    targetPort: 80
+    port: 80
+    targetPort: 3000
+    protocol: TCP
   selector:
     app: golang-api            # Map any pod with label `app=golang-api` to this service
