--- a/k8s/redis-master.yml
+++ b/k8s/redis-master.yml
@@ -27,6 +27,9 @@ spec:
             memory: 100Mi
         ports:
         - containerPort: 6379
+        env:               # Environment variables passed to the container
+          - name: REDIS_PASS
+            value: "11111111"
 ---
 apiVersion: v1
 kind: Service        # Type of Kubernetes resource
@@ -44,12 +47,6 @@ spec:
     app: redis
     role: master
     tier: backend
-  env:               # Environment variables passed to the container
-    - name: REDIS_PASS
-      valueFrom:
-        secretKeyRef:
-          name: redis-secret
-          key: REDIS_PASS
   command: ["redis-server"]
   args: ["--requirepass", "$(REDIS_PASS)"]
     
