--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -16,7 +16,7 @@ steps:
   ]
 #step 3
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['apply', '-f', 'k8s/','--validate=false']
+  args: ['apply', '-f', 'k8s/golang-api.yml']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1'
   - 'CLOUDSDK_COMPUTE_REGION=us-central1-a'
