--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   redis-service:
     image: "redis:alpine"
 
-    command: redis-server --requirepass ${REDIS_PASS}
+    command: redis-server
 
     ports:
      - "6379:6379"
@@ -16,7 +16,5 @@ services:
     ports: 
       - 3000:3000
     restart: always
-    environment: 
-      - REDIS_PASS=${REDIS_PASS}
     depends_on: 
       - redis-service
