--- a/k8s/golang-api.yml
+++ b/k8s/golang-api.yml
@@ -22,6 +22,10 @@ spec:
             memory: 100Mi
         ports:
           - containerPort: 80  # Should match the port number that the Go application listens on
+        env:               # Environment variables passed to the container
+          - name: REDIS_PASS
+            value: "11111111"
+          
 ---
 apiVersion: v1
 kind: Service                    # Type of kubernetes resource
