--- a/k8s/golang-api.yml
+++ b/k8s/golang-api.yml
@@ -23,8 +23,11 @@ spec:
         ports:
           - containerPort: 80  # Should match the port number that the Go application listens on
         env:               # Environment variables passed to the container
-          - name: REDIS_PASS
-            value: "11111111"
+        - name: REDIS_PASS
+          valueFrom:
+            secretKeyRef:
+              name: redis
+              key: REDIS_PASS
           
 ---
 apiVersion: v1
