--- a/k8s/redis-master.yml
+++ b/k8s/redis-master.yml
@@ -28,8 +28,12 @@ spec:
         ports:
         - containerPort: 6379
         env:               # Environment variables passed to the container
-          - name: REDIS_PASS
-            value: "11111111"
+        - name: REDIS_PASS
+          valueFrom:
+            secretKeyRef:
+              name: redis
+              key: REDIS_PASS
+        args: ["--requirepass", "$(REDIS_PASS)"]
 ---
 apiVersion: v1
 kind: Service        # Type of Kubernetes resource
@@ -47,7 +51,6 @@ spec:
     app: redis
     role: master
     tier: backend
-  command: ["redis-server"]
-  args: ["--requirepass", "$(REDIS_PASS)"]
+  
   
     
