--- a/k8s/redis-master.yml
+++ b/k8s/redis-master.yml
@@ -1,63 +1,68 @@
-apiVersion: apps/v1  # API version
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-service # Unique name for the deployment
+  name: redis-service
   labels:
-    app: redis       # Labels to be applied to this deployment
+    app: redis
 spec:
   selector:
-    matchLabels:     # This deployment applies to the Pods matching these labels
+    matchLabels:
       app: redis
       role: master
       tier: backend
-  replicas: 1        # Run a single pod in the deployment
-  template:          # Template for the pods that will be created by this deployment
+  replicas: 1
+  template:
     metadata:
-      labels:        # Labels to be applied to the Pods in this deployment
+      labels:
         app: redis
         role: master
         tier: backend
-    spec:            # Spec for the container which will be run inside the Pod.
+    spec:
       containers:
-      - name: master
-        image: redis
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
-        ports:
-        - containerPort: 6379
-        env:               # Environment variables passed to the container
-        - name: REDIS_PASS
-          valueFrom:
-            secretKeyRef:
-              name: redis
-              key: REDIS_PASS
-        args: ["--requirepass", "$(REDIS_PASS)"]
-        volumeMounts:
-        - mountPath: "/data"
-          name: redis-data  
+        - name: master
+          image: redis
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+          ports:
+            - containerPort: ${REDIS_PORT}
+          env:
+            - name: REDIS_PORT
+              value: 6379
+            - name: REDIS_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: redis
+                  key: REDIS_PASS
+          args: ["--requirepass", "$(REDIS_PASS)"]
+          volumeMounts:
+            - mountPath: "/data"
+              name: redis-data
       volumes:
-      - name: redis-data
-        persistentVolumeClaim:
-          claimName: pvc-redis
+        - name: redis-data
+          persistentVolumeClaim:
+            claimName: pvc-redis
 ---
 apiVersion: v1
-kind: Service        # Type of Kubernetes resource
+kind: Service
 metadata:
-  name: redis-service # Name of the Kubernetes resource
-  labels:            # Labels that will be applied to this resource
+  name: redis-service
+  labels:
     app: redis
     role: master
     tier: backend
 spec:
   ports:
-  - port: 6379       # Map incoming connections on port 6379 to the target port 6379 of the Pod
-    targetPort: 6379
-  selector:          # Map any Pod with the specified labels to this service
+    - port: ${REDIS_PORT}
+      targetPort: ${REDIS_PORT}
+  selector:
     app: redis
     role: master
     tier: backend
+  env:
+    - name: REDIS_PORT
+      value: 6379
 
 ---
 apiVersion: v1
@@ -70,7 +75,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  
+
 ---
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
@@ -84,9 +89,9 @@ spec:
   minReplicas: 1
   maxReplicas: 12
   metrics:
-  - type: Resource
-    resource:
-      name: memory
-      target:
-        type: Utilization
-        averageUtilization: 60
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 60
